# colab_pipelines

./: LICENSE  Pipfile  README.md  pyproject.toml
notebooks/: 01_prepare_data.ipynb  02_train_language_models.ipynb  03_train_s2t.ipynb  05_infer.ipynb  prepare_data.ipynb  train_floret.ipynb
src/: inference.py
src/data_tasks/: clean_nyest.py  get_unigrams.py  post_process_kenml.py  preprocess_merged.py  preprocess_oscar.py
src/training/: inference.py  wav2vec2_hu.py
